--- a/LODGE RENT PREDICTON.ipynb
+++ b/LODGE RENT PREDICTON.ipynb
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 163,
+   "execution_count": 2,
    "id": "610ce96f",
    "metadata": {
     "scrolled": true
@@ -3171,7 +3171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 506,
+   "execution_count": 3,
    "id": "401593ff",
    "metadata": {
     "scrolled": false
@@ -3613,7 +3613,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 502,
+   "execution_count": 4,
    "id": "829df924",
    "metadata": {
     "scrolled": true
@@ -3653,7 +3653,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 503,
+   "execution_count": 5,
    "id": "632fd76c",
    "metadata": {
     "scrolled": true
@@ -3959,26 +3959,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 504,
+   "execution_count": 7,
    "id": "5507180b",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['Encoder']"
-      ]
-     },
-     "execution_count": 504,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "import joblib\n",
-    "joblib.dump(rfr1, 'best_lodge_prediction_model')\n",
-    "joblib.dump(mainohe, 'Encoder')"
+    "import pickle\n",
+    "with open('Encoder', 'wb') as f:\n",
+    "        pickle.dump(rfr1, f)\n",
+    "with open('best_lodge_prediction_model', 'wb') as f:\n",
+    "        pickle.dump(mainohe, f)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9b31d7fe",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
